--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap'); /* H1-H6 */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,300,700&display=swap'); /* all */
 
-
 * {
     font-family: 'montserrat alternates', sans-serif;
     margin: 0;
@@ -113,6 +112,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #313030;
     background-color: #FCC16D;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     margin-bottom: 15px;
@@ -120,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .about:hover {
     transition: all 0.3s;
-    transform: rotate(0.2);
+    /* transform: rotate(2deg); */
     color: #FFFFFF;
     background-color: #C6715A;
     display: flex;
@@ -153,72 +153,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0 10%;
 }
 
-/* footer {
-    margin-top: auto;
-} */
-
-.footer {
-    background-color: #313030;
-    font-size: 0.9rem;
-    color: #FFFFFF;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    padding: 10px;
-}
-
-.f-about {
-    width: 25%;
-}
-
-footer ul li {
-    list-style-type: disc;
-}
-
-.footer ul li a {
-    font-weight: 700;
-    color: #FFFFFF;
-}
-
-.footer ul li a:hover {
-    transition: all 0.3s;
-    color: #FCC16D;
-    font-weight: 700;
-}
-
-footer h4 {
-    font-weight: lighter;
-    margin-bottom: 5px;
-}
-
-.fa-brands {
-    padding: 5px;
-    font-size: 1.5rem;
-}
-
-.fa-brands:hover {
-    transition: all 0.3s;
-    transform: rotate(15deg) scale(1.3);
-    padding: 5px;
-    font-size: 1.5rem;
-}
-
-.fa-github {
-    color: #E6E6E6;
-}
-
-.fa-instagram {
-    color: #FF6B00;
-}
-
-.fa-tiktok {
-    color: #EB00FF;
-}
-
-.fa-facebook-f {
-    color: #256FFF;
-}
-
+/* Page produits.html */
 
 #products-container {
     display: flex;
@@ -288,4 +223,170 @@ footer h4 {
     border-style: none;
     border-radius: 20px;
     font-weight: 700;
+}
+
+/* Fin de produits.html */
+
+/* Page contact */
+
+#contact-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+#map {
+    width: 80%;
+    box-shadow: 0 0 15px #31303045;
+    margin-left: 30px;
+}
+
+.form {
+    margin-right: 30px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+label {
+    text-align: justify;
+    color: #313030;
+    font-weight: 700;
+}
+
+.form h2 {
+    text-align: center;
+    color: #313030;
+    font-weight: lighter;
+    margin-bottom: 3%;
+}
+
+.form h4 {
+    color: #313030;
+    font-weight: lighter;
+    margin-bottom: 3%;
+}
+
+.form p {
+    margin-bottom: 3%;
+}
+
+.form input {
+    width: 100%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.form textarea {
+    width: 100%;
+    height: 100px;
+    resize: none;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.form input, .form textarea {
+    padding: 5%;
+    background-color: #FFFFFF;
+    color: #313030;
+    padding: 3px 10px;
+    border: 1px solid #DCCFCA;
+    border-radius: 20px;
+    font-weight: 700;
+}
+
+.form button {
+    background-color: #58DE86;
+    color: #FFFFFF;
+    padding: 10px 50px;
+    border-style: none;
+    border-radius: 20px;
+    font-weight: 700;
+}
+
+.form button:hover {
+    transition: all 0.3s;
+    background-color: #FCC16D;
+    color: #313030;
+    padding: 10px 50px;
+    border-radius: 20px;
+    font-weight: 700;
+}
+
+.form-line {
+    width: 50%;
+    height: 5px;
+    background-color: #E57257;
+    border-radius: 10px;
+    margin-bottom: 3%;
+}
+
+/* footer {
+    margin-top: auto;
+} */
+
+.footer {
+    background-color: #313030;
+    font-size: 0.9rem;
+    color: #FFFFFF;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    padding: 10px;
+}
+
+.f-about {
+    width: 25%;
+}
+
+footer ul li {
+    list-style-type: disc;
+}
+
+.footer ul li a {
+    font-weight: 700;
+    color: #FFFFFF;
+}
+
+.footer ul li a:hover {
+    transition: all 0.3s;
+    color: #FCC16D;
+    font-weight: 700;
+}
+
+footer h4 {
+    font-weight: lighter;
+    margin-bottom: 5px;
+}
+
+.fa-brands {
+    padding: 5px;
+    font-size: 1.5rem;
+}
+
+.fa-brands:hover {
+    transition: all 0.3s;
+    transform: rotate(15deg) scale(1.3);
+    padding: 5px;
+    font-size: 1.5rem;
+}
+
+.fa-github {
+    color: #E6E6E6;
+}
+
+.fa-instagram {
+    color: #FF6B00;
+}
+
+.fa-tiktok {
+    color: #EB00FF;
+}
+
+.fa-facebook-f {
+    color: #256FFF;
 }
