--- a/style.css
+++ b/style.css
@@ -231,20 +231,18 @@ h1, h2, h3, h4, h5, h6 {
 
 #contact-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin-bottom: 15px;
 }
 
-#map {
-    width: 80%;
+.map {
+    width: 50%;
     box-shadow: 0 0 15px #31303045;
-    margin-left: 30px;
 }
 
 .form {
-    margin-right: 30px;
-    width: 60%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -325,10 +323,6 @@ label {
     margin-bottom: 3%;
 }
 
-/* footer {
-    margin-top: auto;
-} */
-
 .footer {
     background-color: #313030;
     font-size: 0.9rem;
@@ -336,11 +330,24 @@ label {
     display: flex;
     justify-content:space-around;
     align-items: center;
+    text-align: center;
     padding: 10px;
 }
 
 .f-about {
     width: 25%;
+}
+
+.f-infos {
+    width: 25%;
+}
+
+.f-infos ul li {
+    list-style: none;
+}
+
+footer ul {
+    padding-left: 0px;
 }
 
 footer ul li {
