--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap'); /* H1-H6 */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,300,700&display=swap'); /* all */
 
+/* sélecteur universel - universal selectors */
+
 * {
     font-family: 'montserrat alternates', sans-serif;
     margin: 0;
@@ -10,6 +12,8 @@
     list-style: none;
     text-decoration: none;
 }
+
+/* fin de séléecteur universel - end of universal selectors */
 
 body {
     display: flex;
@@ -25,6 +29,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'archivo black', sans-serif;
 }
+
+/* barre de navigation - navigation bar */
 
 .header {
     border-bottom: 1px solid #DCCFCA;
@@ -70,6 +76,10 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #313030;
 }
 
+/* fin de barre de navigation - navigation bar */
+
+/* main title and call to action part */
+
 .main {
     background-image: url("assets/imgs/headerbg.jpg");
     background-size: cover;
@@ -107,6 +117,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 10px;
     font-weight: 700;
 }
+
+/* end of main title and call to action part */
+
+/* about section of the website */
 
 .about {
     color: #313030;
@@ -153,7 +167,9 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0 10%;
 }
 
-/* Page produits.html */
+/* end of about section of the website */
+
+/* products page / page produits.html */
 
 #products-container {
     display: flex;
@@ -225,9 +241,9 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 
-/* Fin de produits.html */
+/* end of products page / page produits.html */
 
-/* Page contact */
+/* page contact / contact.html */
 
 #contact-container {
     display: flex;
@@ -323,6 +339,10 @@ label {
     margin-bottom: 3%;
 }
 
+/* end of page contact / contact.html */
+
+/* footer & socials relatives */
+
 .footer {
     background-color: #313030;
     font-size: 0.9rem;
@@ -370,6 +390,11 @@ footer h4 {
     margin-bottom: 5px;
 }
 
+.socialsflex li {
+    list-style-type: none;
+    display: inline;
+}
+
 .fa-brands {
     padding: 5px;
     font-size: 1.5rem;
@@ -397,3 +422,5 @@ footer h4 {
 .fa-facebook-f {
     color: #256FFF;
 }
+
+/* end of footer & socials relatives */
