--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -7,6 +7,14 @@
         display: none;
     }
 
+    .icons {
+        display: none;
+    }
+
+    #check {
+        display: none;
+    }
+
     } 
         
 /* Écrans moyens - entre 1028px et 1248px */
@@ -54,6 +62,14 @@
     .map {
         margin-bottom: 15px;
     }
+
+    .icons {
+        display: none;
+    }
+
+    #check {
+        display: none;
+    }
     
     }
 
@@ -94,6 +110,14 @@
 
     .map {
         margin-bottom: 15px;
+    }
+
+    .icons {
+        display: none;
+    }
+
+    #check {
+        display: none;
     }
 
  }   
@@ -143,6 +167,14 @@
         margin-bottom: 15px;
     }
 
+    .icons {
+        display: none;
+    }
+
+    #check {
+        display: none;
+    }
+
  }   
     
 /* Petits écrans ou mobile - en dessous 860px */
@@ -156,13 +188,6 @@
         max-width: 100%;
         overflow-x: hidden;
         background-color: #F5F2EF;    
-    }
-
-    .header {
-        border-bottom: 1px solid #DCCFCA;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        margin-bottom: 0px;
     }
 
     .main {
@@ -261,4 +286,95 @@
         margin-bottom: 3%;
     }
 
-}
+    /* burger */
+
+    header {
+        position: absolute;
+        width: 100%;
+        padding: 1.5rem 10%;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1;
+      }
+
+    .header {
+        border: none;
+    }
+
+    .main-nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .main-nav ul {
+        display: block;
+    }
+
+    .main-nav ul li a {
+        font-size: 1.3rem;
+        margin-right: 50px;
+        font-weight: 700;
+        color: #F5F2EF;
+    }
+    
+    .main-nav ul li a:hover {
+        color: #FCC16D;
+        transition: all 0.3s;
+        padding: 0%;
+        border-radius: 5px;
+    }
+
+    nav {
+        margin-top: -50px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background-color: rgba(25, 23, 23, 0.91);
+        overflow: hidden;
+        transition: 0.5s ease;
+      }
+    
+      #check {
+        display: none;
+      }
+    
+      #check:checked ~ nav {
+        height: 10rem;
+      }
+    
+      .icons {
+        position: absolute;
+        left: 85%;
+        top: 20px;
+        font-size: 1.5rem;
+        color: white;
+        cursor: pointer;
+        display: inline-flex;
+        z-index: 50;
+      }
+    
+      #check:checked ~ .icons #iconMenu {
+        display: none;
+      }
+    
+      .icons #iconX {
+        display: none;
+      }
+    
+      #check:checked ~ .icons #iconX {
+        display: block;
+      }
+
+     .fa-bars {
+        background-color: #313030;
+        border-radius: 10px;
+        padding: 50%;
+      }
+      
+    }
