--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -199,7 +199,17 @@
         align-items: center;
         justify-content: center;
         height: 250px;
-        margin: 0;
+        margin-top: 80px;
+        margin-bottom: 0px
+    }
+
+    .header {
+        display: block;
+        background-color: #DCCFCA;
+        width: 100%;
+        height: 80px;
+        position: fixed;
+        z-index: 1000;
     }
 
     #logo {
@@ -207,8 +217,10 @@
     }
 
     #logomobile {
-        display: block;
-        margin-left: 30px;
+        display: inline;
+        position: absolute;
+        left: 10%;
+        top: 20px;
         width: 50px;
     }
 
@@ -263,6 +275,11 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 15px;
+        margin-top: 100px;
+    }
+
+    #products-container {
+        margin-top: 100px;
     }
 
     .form {
@@ -329,7 +346,6 @@
     }
 
     nav {
-        margin-top: -50px;
         position: absolute;
         top: 100%;
         left: 0;
