--- a/style.css
+++ b/style.css
@@ -1,46 +1,51 @@
 /* La boutique d'Harry - CSS @2024 */
 
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap'); /* H1-H6 */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,300,700&display=swap'); /* all */
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap"); /* H1-H6 */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,300,700&display=swap"); /* all */
 
 /* sélecteur universel - universal selectors */
 
 * {
-    font-family: 'montserrat alternates', sans-serif;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
+  font-family: "montserrat alternates", sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
 /* fin de séléecteur universel - end of universal selectors */
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 100vh;
-    max-width: 75%;
-    margin: auto;
-    overflow-x: hidden;
-    background-color: #F5F2EF;    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
+  max-width: 75%;
+  margin: auto;
+  overflow-x: hidden;
+  background-color: #f5f2ef;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'archivo black', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "archivo black", sans-serif;
 }
 
 /* barre de navigation - navigation bar */
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-    border-bottom: 1px solid #DCCFCA;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  border-bottom: 1px solid #dccfca;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  margin-bottom: 15px;
 }
 
 /* .header:hover {
@@ -52,32 +57,32 @@ h1, h2, h3, h4, h5, h6 {
 } */
 
 #logo {
-    margin-left: 50px;
-    width: 160px;
+  margin-left: 50px;
+  width: 160px;
 }
 
 .main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .main-nav ul {
-    display: flex;
+  display: flex;
 }
 
 .main-nav ul li a {
-    margin-right: 50px;
-    font-weight: 700;
-    color: #313030;
+  margin-right: 50px;
+  font-weight: 700;
+  color: #313030;
 }
 
 .main-nav ul li a:hover {
-    color: #FFFFFF;
-    transition: all 0.3s;
-    padding: 10%;
-    border-radius: 5px;
-    background-color: #313030;
+  color: #ffffff;
+  transition: all 0.3s;
+  padding: 10%;
+  border-radius: 5px;
+  background-color: #313030;
 }
 
 /* fin de barre de navigation - navigation bar */
@@ -85,41 +90,41 @@ h1, h2, h3, h4, h5, h6 {
 /* main title and call to action part */
 
 .main {
-    background-image: url("assets/imgs/headerbg.jpg");
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 250px;
-    margin-bottom: 15px;
+  background-image: url("assets/imgs/headerbg.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 250px;
+  margin-bottom: 15px;
 }
 
 .title {
-    color: #FFFFFF;
-    font-weight: lighter;
-    font-size: 3rem;
+  color: #ffffff;
+  font-weight: lighter;
+  font-size: 3rem;
 }
 
 .cta {
-    background-color: #58DE86;
-    color: #FFFFFF;
-    padding: 10px 50px;
-    border-style: none;
-    border-radius: 20px;
-    margin-top: 10px;
-    font-weight: 700;
+  background-color: #58de86;
+  color: #ffffff;
+  padding: 10px 50px;
+  border-style: none;
+  border-radius: 20px;
+  margin-top: 10px;
+  font-weight: 700;
 }
 
 .cta:hover {
-    transition: all 0.3s;
-    background-color: #FCC16D;
-    color: #313030;
-    padding: 10px 50px;
-    border-radius: 20px;
-    margin-top: 10px;
-    font-weight: 700;
+  transition: all 0.3s;
+  background-color: #fcc16d;
+  color: #313030;
+  padding: 10px 50px;
+  border-radius: 20px;
+  margin-top: 10px;
+  font-weight: 700;
 }
 
 /* end of main title and call to action part */
@@ -127,48 +132,48 @@ h1, h2, h3, h4, h5, h6 {
 /* about section of the website */
 
 .about {
-    color: #313030;
-    background-color: #FCC16D;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 15px;
+  color: #313030;
+  background-color: #fcc16d;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
 }
 
 .about:hover {
-    transition: all 0.3s;
-    /* transform: rotate(2deg); */
-    color: #FFFFFF;
-    background-color: #C6715A;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  transition: all 0.3s;
+  /* transform: rotate(2deg); */
+  color: #ffffff;
+  background-color: #c6715a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .about div {
-    width: 100%;
+  width: 100%;
 }
 
 .about-img {
-    height: 200px;
-    background-image: url("assets/imgs/about.jpg");
-    background-position: center;
-    background-size: cover;
+  height: 200px;
+  background-image: url("assets/imgs/about.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 .about-txt {
-    text-align: justify;
+  text-align: justify;
 }
 
 .about-txt h2 {
-    font-weight: lighter;
-    padding: 0 10%; 
-    margin-bottom: 1%;
+  font-weight: lighter;
+  padding: 0 10%;
+  margin-bottom: 1%;
 }
 
 .about-txt p {
-    padding: 0 10%;
+  padding: 0 10%;
 }
 
 /* end of about section of the website */
@@ -176,73 +181,71 @@ h1, h2, h3, h4, h5, h6 {
 /* products page / page produits.html */
 
 #products-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 15px;
 }
 
 .potion {
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5%;
-
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5%;
 }
 
 .potion:hover {
-    transition: all 0.3s;
-    background-color: #3130300a;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5%;
-
+  transition: all 0.3s;
+  background-color: #3130300a;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5%;
 }
 
 .potion img {
-    width: 80px;
-    margin-bottom: 3%;
+  width: 80px;
+  margin-bottom: 3%;
 }
 
 .potion img:hover {
-    transition: all 0.3s;
-    transform: rotate(10deg) scale(1.2);
-    width: 80px;
-    margin-bottom: 3%;
+  transition: all 0.3s;
+  transform: rotate(10deg) scale(1.2);
+  width: 80px;
+  margin-bottom: 3%;
 }
 
 .potion h4 {
-    margin-bottom: 3%;
-    font-weight: lighter;
+  margin-bottom: 3%;
+  font-weight: lighter;
 }
 
 .potion p {
-    margin-bottom: 3%;
+  margin-bottom: 3%;
 }
 
 .p-btn {
-    background-color: #C6715A;
-    color: #FFFFFF;
-    padding: 3px 40px;
-    border-style: none;
-    border-radius: 20px;
-    font-weight: 700;
+  background-color: #c6715a;
+  color: #ffffff;
+  padding: 3px 40px;
+  border-style: none;
+  border-radius: 20px;
+  font-weight: 700;
 }
 
 .p-btn:hover {
-    transition: all 0.3s;
-    background-color: #593C38;
-    color: #FFFFFF;
-    padding: 3px 50px;
-    border-style: none;
-    border-radius: 20px;
-    font-weight: 700;
+  transition: all 0.3s;
+  background-color: #593c38;
+  color: #ffffff;
+  padding: 3px 50px;
+  border-style: none;
+  border-radius: 20px;
+  font-weight: 700;
 }
 
 /* end of products page / page produits.html */
@@ -250,97 +253,98 @@ h1, h2, h3, h4, h5, h6 {
 /* page contact / contact.html */
 
 #contact-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
 .map {
-    width: 50%;
-    box-shadow: 0 0 15px #31303045;
+  width: 50%;
+  box-shadow: 0 0 15px #31303045;
 }
 
 .form {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 label {
-    text-align: justify;
-    color: #313030;
-    font-weight: 700;
+  text-align: justify;
+  color: #313030;
+  font-weight: 700;
 }
 
 .form h2 {
-    text-align: center;
-    color: #313030;
-    font-weight: lighter;
-    margin-bottom: 3%;
+  text-align: center;
+  color: #313030;
+  font-weight: lighter;
+  margin-bottom: 3%;
 }
 
 .form h4 {
-    color: #313030;
-    font-weight: lighter;
-    margin-bottom: 3%;
+  color: #313030;
+  font-weight: lighter;
+  margin-bottom: 3%;
 }
 
 .form p {
-    margin-bottom: 3%;
+  margin-bottom: 3%;
 }
 
 .form input {
-    width: 100%;
-    margin-top: 3%;
-    margin-bottom: 3%;
+  width: 100%;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 .form textarea {
-    width: 100%;
-    height: 100px;
-    resize: none;
-    margin-top: 3%;
-    margin-bottom: 3%;
+  width: 100%;
+  height: 100px;
+  resize: none;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
-.form input, .form textarea {
-    padding: 5%;
-    background-color: #FFFFFF;
-    color: #313030;
-    padding: 3px 10px;
-    border: 1px solid #DCCFCA;
-    border-radius: 20px;
-    font-weight: 700;
+.form input,
+.form textarea {
+  padding: 5%;
+  background-color: #ffffff;
+  color: #313030;
+  padding: 3px 10px;
+  border: 1px solid #dccfca;
+  border-radius: 20px;
+  font-weight: 700;
 }
 
 .form button {
-    background-color: #58DE86;
-    color: #FFFFFF;
-    padding: 10px 50px;
-    border-style: none;
-    border-radius: 20px;
-    font-weight: 700;
+  background-color: #58de86;
+  color: #ffffff;
+  padding: 10px 50px;
+  border-style: none;
+  border-radius: 20px;
+  font-weight: 700;
 }
 
 .form button:hover {
-    transition: all 0.3s;
-    background-color: #FCC16D;
-    color: #313030;
-    padding: 10px 50px;
-    border-radius: 20px;
-    font-weight: 700;
+  transition: all 0.3s;
+  background-color: #fcc16d;
+  color: #313030;
+  padding: 10px 50px;
+  border-radius: 20px;
+  font-weight: 700;
 }
 
 .form-line {
-    width: 50%;
-    height: 5px;
-    background-color: #E57257;
-    border-radius: 10px;
-    margin-bottom: 3%;
+  width: 50%;
+  height: 5px;
+  background-color: #e57257;
+  border-radius: 10px;
+  margin-bottom: 3%;
 }
 
 /* end of page contact / contact.html */
@@ -348,83 +352,83 @@ label {
 /* footer & socials relatives */
 
 .footer {
-    background-color: #313030;
-    font-size: 0.9rem;
-    color: #FFFFFF;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    text-align: center;
-    padding: 10px;
+  background-color: #313030;
+  font-size: 0.9rem;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  padding: 10px;
 }
 
 .f-about {
-    width: 25%;
+  width: 25%;
 }
 
 .f-infos {
-    width: 25%;
+  width: 25%;
 }
 
 .f-infos ul li {
-    list-style: none;
+  list-style: none;
 }
 
 footer ul {
-    padding-left: 0px;
+  padding-left: 0px;
 }
 
 footer ul li {
-    list-style-type: disc;
+  list-style-type: disc;
 }
 
 .footer ul li a {
-    font-weight: 700;
-    color: #FFFFFF;
+  font-weight: 700;
+  color: #ffffff;
 }
 
 .footer ul li a:hover {
-    transition: all 0.3s;
-    color: #FCC16D;
-    font-weight: 700;
+  transition: all 0.3s;
+  color: #fcc16d;
+  font-weight: 700;
 }
 
 footer h4 {
-    font-weight: lighter;
-    margin-bottom: 5px;
+  font-weight: lighter;
+  margin-bottom: 5px;
 }
 
 .socialsflex li {
-    list-style-type: none;
-    display: inline;
+  list-style-type: none;
+  display: inline;
 }
 
 .fa-brands {
-    padding: 5px;
-    font-size: 1.5rem;
+  padding: 5px;
+  font-size: 1.5rem;
 }
 
 .fa-brands:hover {
-    transition: all 0.3s;
-    transform: rotate(15deg) scale(1.3);
-    padding: 5px;
-    font-size: 1.5rem;
+  transition: all 0.3s;
+  transform: rotate(15deg) scale(1.3);
+  padding: 5px;
+  font-size: 1.5rem;
 }
 
 .fa-github {
-    color: #E6E6E6;
+  color: #e6e6e6;
 }
 
 .fa-instagram {
-    color: #FF6B00;
+  color: #ff6b00;
 }
 
 .fa-tiktok {
-    color: #EB00FF;
+  color: #eb00ff;
 }
 
 .fa-facebook-f {
-    color: #256FFF;
+  color: #256fff;
 }
 
 /* end of footer & socials relatives */
